--- a/page-balloon-festival.html
+++ b/page-balloon-festival.html
@@ -325,7 +325,7 @@
                                     (от количества людей в группе, места в транспорте по датам оплат) 
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    транспорт тур.класса с раскладными сиденьями, ТВ;
+                                    "Легкая дорога" транспорт тур.класса с раскладными сиденьями, ТВ;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                    самая увлекательная экскурсия по Бакоте 1,5-2 часа;
@@ -337,18 +337,19 @@
                                     интереснейшая экскурсия по Каменец-Подольскому центру;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    питание обед и ужин в "Ресторації національної кухні "Ситий Козак" г.Каменец-Подольский;
+                                    очень вкусное питание обед и завтрак в гостинице г.Каменец-Подольский;
                                 </li>
                                  <li class="list-group-item list-group-item-success ">
-                                    1 ночь в мини гостинице домашнего типа Старый город г.Каменец-Подольский 
-                                    10 минут пешком до замка(Центр города) номера 4, 5, 6 мест в номере члены группы нет посторонних
-                                    в гостинице (микроволновка, чайник, холодильник, утюг, WI-FI);
+                                    1 ночь в уютнейшей гостинице г.Каменец-Подольский 
+                                    2 и 3х местные номера
+                                    (если ВАс 2х селим в 2х местный) удобства в номере;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    входной билет в Парк Новая Софиевка;
+                                    входной билет в Парк Новая Софиевка или 
+                                    Старая Софиевка на выбор 1 парк;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    сопровождение представителя нашей компании;
+                                    супер-позитивное сопровождение представителя нашей компании;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     магнит от Нового поворота, самое замечательное настроение.
@@ -359,13 +360,15 @@
                             <h5 class="alert-heading">В стоимость не входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-danger ">
-                                   Входные билеты Меджибожский замок до 70 грн с экскурсией(по-желанию);
+                                   Полеты на самолете 1000 грн/чел
+                                    или воздушном шаре 3500 грн/чел с трансфером к месту
+                                    вылета с гостиницы и обратно(по-желанию);
                                 </li>
                                 <li class="list-group-item list-group-item-danger ">
                                     питание в дороге кроме запланированного в стоимости; 
                                 </li>
                                  <li class="list-group-item list-group-item-danger ">
-                                    экскурсия по Новой Софиевке Умань (по-желанию); 
+                                    экскурсия по Новой Софиевке или Старой Софиевке Умань (по-желанию); 
                                 </li>
                              <ul>
                         </div>
