--- a/page-zoo.html
+++ b/page-zoo.html
@@ -99,7 +99,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>16 Мая</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>19 сентября</span>
                                 </li>
                             </ul>
                         </div>
@@ -136,12 +136,18 @@
                             <span  class="fa fa-info-circle"></span><strong> Информируем</strong><br />
                             <span class="txt-alg-jf">
                              Собери компанию 10 человек, 11 едет бесплатно )<br/>
-                             Цена билета 335 грн от 6 до 200 лет, 270 грн 4-6 лет,
-                              до 4х бесплатно(без предоставления отдельного места в транспорте)
+                             Цена билета: 400 грн от 6 лет, 300 грн 4-6 лет
+                             при брони до 30 августа 
+                             420 грн от 6 лет, 320 грн 4-6 лет
+                             при брони с 1 до 7 сентября
+                             440 грн от 6 лет, 340 грн 4-6 лет
+                             при брони с 8 сентября
+                             до 4х бесплатно(без предоставления отдельного места в транспорте)
+                             +380506702264 Viber/Telegram месенджер/директ
                             </span>
                         </div>
                         <ul class="listing">
-                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span>270-335 Грн.</span></li>
+                            <li><span class="fa fa-tags mr-2"></span> Стоимость: <span>400 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span> Продолжительность: <span>1 День</span></li>
                         </ul>
                         <br>
@@ -210,24 +216,31 @@
                                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
                                     <div class="card-body txt-alg-jf">
-                                        <p><strong>09:45 </strong>
-                                             Выезд с центра Запорожья после минутки позитива. 
+                                        <p><strong>10:30 </strong>
+                                             Выезд с центра Запорожья после минутки позитива. За
+                                            Заберем Вас Фестивальная-Советская-Автовокзал (согласуйте при брони)
                                         </p>
-                                        <p><strong>10:45-12:45</strong>
+                                        <p><strong>11:30-13:30</strong>
                                             Мы в Зоопарке Пылышенко, слушаем удивительную
                                           историю создания Зоопарка и знакомимся с животными:
                                           милыми мишками, смешными енотиками, величественными 
                                           тиграми и конечно грациозными 
-                                          львами! Делаем самые красивые фото на память. Перекус бутербродиком из дома если проголодались.
-                                          Оставляем денежку от Нас на питание животным и продолжаем свой путь.<p/>
-                                          <p><strong>13:00-14:00 </strong>Посещаем мистический Замок Попова! 
-                                          Говорят в замке живет настоящее привидение, может встретим его  *посещение по желанию, доп.оплата.<p/> 
-                                          <p><strong>14:40-15:40 </strong>Панское озеро с волшебным родником.
+                                          львами! Делаем самые красивые фото на память. Посещаем уютное кафе с хот-догами, картошкой фри, 
+                                          мороженым и  кофе. Кого-же мы увидим: смешных енотиков, быструю носуху, красивейших тигров и львов, 
+                                          ведь в зоопарке они живут семьями, белого тигра, рысь, гепарда, дикую кошку, обезьянок, попугайчиков, 
+                                          огромных и добрых мясоедов, сластен мишек и еще много разных животных, ведь с каждым днем зоопарк растет 
+                                          и развивается! Оставляем денежку от Нас на питание животным и продолжаем свой путь.<p/>
+                                          <p><strong>13:40-14:40 </strong>Посещаем мистический Замок Попова! 
+                                          Говорят в замке живет настоящее привидение, может встретим его  *посещение по желанию, доп.оплата
+                                          (70грн взрослые, 50 грн дети вход, экскурсия по комплексу отдельно +25-35 грн для групп от количества людей 
+                                          в группе )<p/> 
+                                          <p><strong>15:25-17:00 </strong>Панское озеро с волшебным родником.
                                           Все желающие смогут искупаться в этом целебнейшем озере тем.воды +12.
                                           Если будет хорошая погода, обязательно посетим родник и наберем с собой вкуснейшей воды! 
                                           Загадаем желание и оно обязательно сбудется.<p/>
-                                          <p><strong>16:20</strong> Мы уже в Запорожье, довольные возвращаемся 
-                                          домой чтоб поделится впечатлениями с друзьями и близкими (но еще лучше их взять с собой).
+                                          <p><strong>17:30</strong> ММы уже в Запорожье! В ПОЛНОМ ВОСТОРГЕ ОТ ЭКСКУРСИИ! С ПРЕКРАСНЫМ НАСТРОЕНИЕМ ОТДЫХАЕМ 
+                                          И ВЫКЛАДЫВАЕМ ФОТО. Не забывайте отмечать наши странички, +10000 в карму и искренняя наша благодарочка (moa)
+                                          *Время указано предварительно и может меняться для улучшения качества отдыха туристам, без ущерба экскурсии!
                                         </p>
                                     </div>
                                 </div>
@@ -241,16 +254,21 @@
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-success">
                                    Проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест;
+                                    (от количества людей в группе)
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     входной билет и экскурсия в Центре Пылышенко,;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                   сопровождение представителя Нового поворота;
+                                   супер-позитивное сопровождение представителя Нового поворота;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     самое замечательное настроение,
                                     доброе дело которые делаете вы помогая животным!
+                                    БЛАГОТВОРИТЕЛЬНАЯ АКЦИЯ НАКОРМИ ЛЬВА*(все кто едет с нами 
+                                    кроме оплаты входного билета в Центр Пылышенко дарят дополнительные средства, 
+                                    а именно Новый поворот 50% от поездки*(от прибыли ТА) передаст Центру 
+                                    Пылышенко на питание львам)
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     магнит от Нового поворота.
@@ -261,7 +279,9 @@
                             <h5 class="alert-heading">В стоимость не входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-danger ">
-                                    Входные билеты в Усадьбу Попова (70 вз, 50 грн 6-14 л);
+                                    Входные билеты в Усадьбу Попова (70грн взрослые, 50 грн дети вход, 
+                                    экскурсия по комплексу отдельно +25-35 грн для групп от количества 
+                                    людей в группе )
                                 </li>
                                 <li class="list-group-item list-group-item-danger ">
                                     питание с собой.
