--- a/packages.html
+++ b/packages.html
@@ -102,32 +102,27 @@
                             ***  Туры  ***
      -->                              
                 
-                <!--  Львята и лошадки  -->
+               <!--  Зоопарк Пылышенко -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-lions-and-horses.html">
-                            <img src="images/Lions-and-Horses/home-lions-and-horses.jpg" alt="baloon-fast"
-                                class="img-fluid" />
+                        <a href="https://novipovorot.pp.ua/page-zoo.html">
+                            <img src="images/zoo-min.jpg" alt="Wine" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>350грн.</span></p>
+                        <!--<p><span class="fa fa-tags"></span> <span> грн.</span></p>-->
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-lions-and-horses.html">
-                                Львята и лошадки
-                            </a>
+                            <a href="https://novipovorot.pp.ua/page-zoo.html">Зоопарк-Замок-Oзеро</a>
                         </h5>
-                        <p class="">
-                            Экскурсия львы и лошади...
-                        </p>
+                        <p class="">Зоопарк Пылышенко-Замок Попова-Oзеро</p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 07 Августа </span></li>
+                            <!--<li><span class="fa fa-calendar mr-2"></span>Дата: <span>    </span></li>-->
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //Львята и лошадки -->
+                <!--  //Зоопарк Пылышенко -->
                 
                 <!-- Сырная ферма и Пасека -->
                 <div class="col-lg-3 col-sm-6 mb-5">
