--- a/page-zoo.html
+++ b/page-zoo.html
@@ -289,7 +289,7 @@
                                 <ul>
                         </div>
                           <!-- Виджет обсуждения Telegram -->      
-                                <script async src="https://comments.app/js/widget.js?3" data-comments-app-website="vEP9HRdh" data-limit="15"></script>
+                                <!--<script async src="https://comments.app/js/widget.js?3" data-comments-app-website="vEP9HRdh" data-limit="15"></script>-->
                           <!-- //Виджет обсуждения Telegram-->
                      <hr>
                <p>
