--- a/test.html
+++ b/test.html
@@ -55,7 +55,7 @@
                     <li class=""><a href="index.html">Главная</a></li>
                     <li class=""><a href="about.html">Отзывы </a></li>
                     <li class="nav-item dropdown">
-                       <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Туры</a>
+                       <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Туры</a>
                        <div class="dropdown-menu">
                          <a class="dropdown-item" href="https://novipovorot.pp.ua/packages.html">Все Туры</a>
                          <a class="dropdown-item" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Туров</a>
