--- a/index.html
+++ b/index.html
@@ -92,6 +92,19 @@
                 <ul class="menu ml-auto mt-1">
                     <li class="active"><a href="index.html">Главная</a></li>
                     <li class=""><a href="about.html"> Отзывы </a></li>
+                    
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                       Туры
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="v">Все Туры</a></li>
+                        <li><a class="dropdown-item" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Туров</a></li>
+                       <!-- <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>-->
+                      </ul>
+                    </li>
+                    <!--
                     <li class="nav-item dropdown">
                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Туры</a>
                        <div class="dropdown-menu">
@@ -99,6 +112,7 @@
                          <a class="dropdown-item" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Туров</a>
                        </div>
                      </li>
+                    -->
                     <li class=""><a href="blog.html">Блог</a></li>
                     <li class=""><a href="contact.html">Контакты</a></li>
                     <li class="booking"><a href="booking.html">Забронировать</a></li>
