--- a/index.html
+++ b/index.html
@@ -91,20 +91,7 @@
                 <input type="checkbox" id="drop" />
                 <ul class="menu ml-auto mt-1">
                     <li class="active"><a href="index.html">Главная</a></li>
-                    <li class=""><a href="about.html"> Отзывы </a></li>
-                    
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                       Туры
-                      </a>
-                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="v">Все Туры</a></li>
-                        <li><a class="dropdown-item" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Туров</a></li>
-                       <!-- <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>-->
-                      </ul>
-                    </li>
-                    <!--
+                    <li class=""><a href="about.html">Отзывы</a></li>
                     <li class="nav-item dropdown">
                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Туры</a>
                        <div class="dropdown-menu">
@@ -112,7 +99,6 @@
                          <a class="dropdown-item" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Туров</a>
                        </div>
                      </li>
-                    -->
                     <li class=""><a href="blog.html">Блог</a></li>
                     <li class=""><a href="contact.html">Контакты</a></li>
                     <li class="booking"><a href="booking.html">Забронировать</a></li>
@@ -706,7 +692,9 @@
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    
     <!-- Aos script -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
