--- a/blog.html
+++ b/blog.html
@@ -39,7 +39,11 @@
 	
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-   
+   <style>
+	header, a:hover {
+		text-decoration: none;
+	   }
+   </style>
 </head>
 
 <body>
