--- a/test.html
+++ b/test.html
@@ -177,109 +177,20 @@
                                         class="fa fa-paper-plane"></span></a></li>
                         </ul>
                         </p>
-                        
-                        <!-- Описание экскурсии -->
-                      <!--
-                        <div class="accordion mt-3 mb-3" id="accordionExample">
-                            <div class="card">
-                                <div class="card-header" id="headingOne">
-                                    <h5 class="mb-0">
-                                        <button class="btn btn-link" type="button" data-toggle="collapse"
-                                            data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                            <span class="fa fa-angle-right"></span> Описание экскурсии...
-                                        </button>
-                                    </h5>
-                                </div>
-                                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
-                                    data-parent="#accordionExample">
-                                    <div class="card-body txt-alg-jf">
-                                        <p><strong>10:30 </strong>
-                                             Выезд с центра Запорожья после минутки позитива. За
-                                            Заберем Вас Фестивальная-Советская-Автовокзал (согласуйте при брони)
-                                        </p>
-                                        <p><strong>11:30-13:30</strong>
-                                            Мы в Зоопарке Пылышенко, слушаем удивительную
-                                          историю создания Зоопарка и знакомимся с животными:
-                                          милыми мишками, смешными енотиками, величественными 
-                                          тиграми и конечно грациозными 
-                                          львами! Делаем самые красивые фото на память. Посещаем уютное кафе с хот-догами, картошкой фри, 
-                                          мороженым и  кофе. Кого-же мы увидим: смешных енотиков, быструю носуху, красивейших тигров и львов, 
-                                          ведь в зоопарке они живут семьями, белого тигра, рысь, гепарда, дикую кошку, обезьянок, попугайчиков, 
-                                          огромных и добрых мясоедов, сластен мишек и еще много разных животных, ведь с каждым днем зоопарк растет 
-                                          и развивается! Оставляем денежку от Нас на питание животным и продолжаем свой путь.<p/>
-                                          <p><strong>13:40-14:40 </strong>Посещаем мистический Замок Попова! 
-                                          Говорят в замке живет настоящее привидение, может встретим его  *посещение по желанию, доп.оплата
-                                          (70грн взрослые, 50 грн дети вход, экскурсия по комплексу отдельно +25-35 грн для групп от количества людей 
-                                          в группе )<p/> 
-                                          <p><strong>15:25-17:00 </strong>Панское озеро с волшебным родником.
-                                          Все желающие смогут искупаться в этом целебнейшем озере тем.воды +12.
-                                          Если будет хорошая погода, обязательно посетим родник и наберем с собой вкуснейшей воды! 
-                                          Загадаем желание и оно обязательно сбудется.<p/>
-                                          <p><strong>17:30</strong> ММы уже в Запорожье! В ПОЛНОМ ВОСТОРГЕ ОТ ЭКСКУРСИИ! С ПРЕКРАСНЫМ НАСТРОЕНИЕМ ОТДЫХАЕМ 
-                                          И ВЫКЛАДЫВАЕМ ФОТО. Не забывайте отмечать наши странички, +10000 в карму и искренняя наша благодарочка (moa)
-                                          *Время указано предварительно и может меняться для улучшения качества отдыха туристам, без ущерба экскурсии!
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                     -->
-                        <!-- //Описание экскурсии -->
-                      <!--
-                        <div class="alert alert-success">
-                            <h5 class="alert-heading">В стоимость входит:</h5>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item list-group-item-success">
-                                   Проезд по всему маршруту на комфортабельном транспорте от 18 до 49 мест;
-                                    (от количества людей в группе)
-                                </li>
-                                <li class="list-group-item list-group-item-success ">
-                                    входной билет и экскурсия в Центре Пылышенко,;
-                                </li>
-                                <li class="list-group-item list-group-item-success ">
-                                   супер-позитивное сопровождение представителя Нового поворота;
-                                </li>
-                                <li class="list-group-item list-group-item-success ">
-                                    самое замечательное настроение,
-                                    доброе дело которые делаете вы помогая животным!
-                                    БЛАГОТВОРИТЕЛЬНАЯ АКЦИЯ НАКОРМИ ЛЬВА*(все кто едет с нами 
-                                    кроме оплаты входного билета в Центр Пылышенко дарят дополнительные средства, 
-                                    а именно Новый поворот 50% от поездки*(от прибыли ТА) передаст Центру 
-                                    Пылышенко на питание львам)
-                                </li>
-                                <li class="list-group-item list-group-item-success ">
-                                    магнит от Нового поворота.
-                                </li>
+
+                        <ul class="list-unstyled">
+                          <li>Integer molestie lorem at massa</li>
+                          <li>Facilisis in pretium nisl aliquet</li>
+                          <li>Nulla volutpat aliquam velit
+                            <ul>
+                              <li>Phasellus iaculis neque</li>
+                              <li>Purus sodales ultricies</li>
                             </ul>
-                        </div>
-                        <div class="alert alert-danger">
-                            <h5 class="alert-heading">В стоимость не входит:</h5>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item list-group-item-danger ">
-                                    Входные билеты в Усадьбу Попова (70грн взрослые, 50 грн дети вход, 
-                                    экскурсия по комплексу отдельно +25-35 грн для групп от количества 
-                                    людей в группе )
-                                </li>
-                                <li class="list-group-item list-group-item-danger ">
-                                    питание с собой.
-                                </li>
-                                <ul>
-                        </div>-->
-                          <!-- Виджет обсуждения Telegram -->      
-                                <!--<script async src="https://comments.app/js/widget.js?3" data-comments-app-website="vEP9HRdh" data-limit="15"></script>-->
-                          <!-- //Виджет обсуждения Telegram-->
-                    <!--
-                     <hr>
-               <p>
-                Тексты подсказок:
-               </p>
-               <span class="badge rounded-pill bg-secondary text-white"> Зоопарк Пылышенко </span>
-               <span class="badge rounded-pill bg-secondary text-white"> Мистический Замок</span>
-               <span class="badge rounded-pill bg-secondary text-white"> Замок Попова </span>
-               <span class="badge rounded-pill bg-secondary text-white"> Панское озеро  </span>
-               <span class="badge rounded-pill bg-secondary text-white"> Волшебный родник </span>
-            -->
-                      <!-- <div id="liqpay_checkout"></div>-->
+                          </li>
+                          <li>Faucibus porta lacus fringilla vel</li>
+                          <li>Eget porttitor lorem</li>
+                        </ul>       
+                    
                     </div>
                 </div>
             </div>
