--- a/test.html
+++ b/test.html
@@ -35,6 +35,15 @@
         href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
     <!-- //google fonts -->
+    <style>
+        .cirle {
+            list-style-type: circle;
+        }
+        
+        .disc {
+            list-style-type: disc;
+        }
+    </style>
 
 </head>
 
@@ -121,11 +130,11 @@
         </div>
     </section>
     <!--//single page-->
-                        <ul class="list-unstyled">
+                        <ul class="list-unstyled disc">
                           <li>Integer molestie lorem at massa</li>
                           <li>Facilisis in pretium nisl aliquet</li>
                           <li>Nulla volutpat aliquam velit
-                            <ul>
+                            <ul class="cirle">
                               <li>Phasellus iaculis neque</li>
                               <li>Purus sodales ultricies</li>
                             </ul>
