--- a/test.html
+++ b/test.html
@@ -38,10 +38,12 @@
     <style>
         .cirle {
             list-style-type: circle;
+            padding-left: 2rem;
         }
         
         .disc {
             list-style-type: disc;
+            padding-left: 2rem;
         }
     </style>
 
@@ -113,7 +115,7 @@
                           <li>Integer molestie lorem at massa</li>
                           <li>Facilisis in pretium nisl aliquet</li>
                           <li>Nulla volutpat aliquam velit
-                            <ul class="cirle">
+                            <ul style="list-style-type: circle; padding-left: 2rem;" class="cirle">
                               <li>Phasellus iaculis neque</li>
                               <li>Purus sodales ultricies</li>
                             </ul>
