--- a/test.html
+++ b/test.html
@@ -111,17 +111,17 @@
                 <div class="col-lg-8 col-xl-9 blog-left-sub">         
                     <div class="blog-two-two">
                         
-                       <ul class="list-unstyled disc">
-                          <li>Integer molestie lorem at massa</li>
-                          <li>Facilisis in pretium nisl aliquet</li>
-                          <li>Nulla volutpat aliquam velit
-                            <ul style="list-style-type: circle; padding-left: 2rem;" class="cirle">
-                              <li>Phasellus iaculis neque</li>
-                              <li>Purus sodales ultricies</li>
+                       <ul class="list-unstyled">
+                          <li class="disc">Integer molestie lorem at massa</li>
+                          <li class="disc">Facilisis in pretium nisl aliquet</li>
+                          <li class="disc">Nulla volutpat aliquam velit
+                            <ul>
+                              <li class="cirle">Phasellus iaculis neque</li>
+                              <li class="cirle">Purus sodales ultricies</li>
                             </ul>
                           </li>
-                          <li>Faucibus porta lacus fringilla vel</li>
-                          <li>Eget porttitor lorem</li>
+                          <li class="disc">Faucibus porta lacus fringilla vel</li>
+                          <li class="disc">Eget porttitor lorem</li>
                         </ul>   
                         
                     </div>
