--- a/test.html
+++ b/test.html
@@ -37,12 +37,14 @@
     <style>
         .cirle {
             list-style-type: circle;
-            padding-left: 2rem;
+            margin-left: 2rem;
         }
         
         .disc {
             list-style-type: disc;
-            padding-left: 2rem;
+        }
+        ::marker {
+          color: #007bff;
         }
     </style>
 
