--- a/test.html
+++ b/test.html
@@ -112,7 +112,7 @@
                 <div class="col-lg-8 col-xl-9 blog-left-sub">         
                     <div class="blog-two-two">
                         
-                       <ul class="list-unstyled">
+                       <ul class="list-unstyled mt-4">
                           <li class="disc">Integer molestie lorem at massa</li>
                           <li class="disc">Facilisis in pretium nisl aliquet</li>
                           <li class="disc">Nulla volutpat aliquam velit
