--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
 
     <meta name="description"
-        content="Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net | Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья ">
+        content="Туры выходного дня 'Новый поворот' | Контакты: ☎ 0985771579, ☎ 0506702264, ✉ dovgalyv@ukr.net | Выгодные цены на Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья ">
     
     <meta name="keywords" content="Главная, Туры выходного дня 'Новый поворот', Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья" />
     
