--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <meta name="msvalidate.01" content="5FF6079A376F982853FAC2C48BDDAB73" />
     
     <!-- Open Graph data-->
-    <meta property="og:title" content="Туры выходного дня 'Новый поворот'">
+    <meta property="og:title" content="Туры выходного дня 'Новый поворот' | Экскурсии выходного дня из Запорожья">
     <meta property="og:description"
-        content="Сделаем Вашу жизнь ярче и разнообразнее. Экскурсии, походы, мастер-классы и дегустации... Путешествуйте с улыбкой! " />
+        content="Туры выходного дня 'Новый поворот' | Контакты: ☎ 0985771579, ☎ 0506702264, ✉ dovgalyv@ukr.net | Выгодные цены на Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья  " />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/" />
     <meta property="og:image" content="images/novi-povorot.jpg">
