--- a/packages.html
+++ b/packages.html
@@ -290,7 +290,7 @@
                         <a href="https://novipovorot.pp.ua/page-zoo.html">
                             <img src="images/zoo-min.jpg" alt="Wine" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span> грн.</span></p>
+                        <p><span class="fa fa-tags"></span> <span>400грн.</span></p>
                     </div>
                     <div class="package-info">
                         <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье</h6>
@@ -299,7 +299,7 @@
                         </h5>
                         <p class="">Зоопарк Пылышенко-Замок Попова-Oзеро</p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>400грн.</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>19 Сентября</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
