--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -123,14 +123,20 @@
                             тайн и загадок... Откроем их вместе ?
                         </p>
                         <hr>
-                        <!-- Alert warning -->
-                        <div class="alert alert-warning mt-3 ">
+                        
+                        <!-- Alert -->
+                        <div class="alert alert-info mt-3">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
-                            <span class="fa fa-exclamation-triangle"></span><strong> Внимание!</strong><br />
-                            <span class="txt-alg-jf">Стоимость 80 грн. - для детей от 5 до 12 лет, дети до 4-х лет
-                                бесплатно.</span>
+                            <span class="fa fa-info-circle"></span><strong>  Информируем</strong>
+                            <br />
+                            <br />
+                            <span class="txt-alg-jf">
+                                Стоимость 80 грн. - для детей от 5 до 12 лет, 
+                                дети до 4-х лет бесплатно.
+                            </span>
                         </div>
-                        <!-- //Alert warning -->
+                        <!-- //Alert -->
+                        
                         <ul class="listing">
                             <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>95 Грн.</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
