--- a/page-Zaporizhzhia-on-Dnieper.html
+++ b/page-Zaporizhzhia-on-Dnieper.html
@@ -1,4 +1,3 @@
-<!-- page-walk-on-Dnieper.html -->
 <!DOCTYPE html>
 <html lang="ru">
 
@@ -9,7 +8,8 @@
     <meta name="description" content="Туры выходного дня 'Новый поворот', Запорожье, Экскурсия в Запорожье, Новый Поворот Запорожье, Запорожье на Днепре, 
         Экскурсия с 'огоньком', Прогулка с изюминкой">
 
-    <meta name="keywords" content="Запорожье, Экскурсия в Запорожье, Новый Поворот Запорожье, Запорожье на Днепре, Экскурсия с 'огоньком', Прогулка с изюминкой" />
+    <meta name="keywords"
+        content="Запорожье, Экскурсия в Запорожье, Новый Поворот Запорожье, Запорожье на Днепре, Экскурсия с 'огоньком', Прогулка с изюминкой" />
     <!-- Open Graph data-->
     <meta property="og:title" content=" Экскурсия в Запорожье на Днепре, прогулка с изюминкой">
     <meta property="og:description" content=" Экскурсия в Запорожье на Днепре, прогулка с изюминкой " />
@@ -59,12 +59,14 @@
                     <li class=""><a href="index.html">Главная</a></li>
                     <li class=""><a href="about.html"> Отзывы </a></li>
                     <li class="nav-item dropdown">
-                       <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Туры</a>
-                       <div class="dropdown-menu">
-                         <a class="dropdown-item" href="https://novipovorot.pp.ua/packages.html">Все Туры</a>
-                         <a class="dropdown-item" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание Туров</a>
-                       </div>
-                     </li>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+                            aria-expanded="false">Туры</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="https://novipovorot.pp.ua/packages.html">Все Туры</a>
+                            <a class="dropdown-item" href="https://novipovorot.pp.ua/Excursion-Schedule.html">Расписание
+                                Туров</a>
+                        </div>
+                    </li>
                     <li class=""><a href="blog.html">Блог</a></li>
                     <li class=""><a href="contact.html">Контакты</a></li>
                     <li class="booking"><a href="booking.html">Забронировать</a></li>
@@ -152,7 +154,7 @@
                         </p>
                         <p>
                             Бронирование билетов осуществляется заранеe: </p>
-                       
+
                         <!-- Забронировать -->
                         <div class="page-booking-btn ml-1 mt-1 mb-1 row">
                             <a href="https://novipovorot.pp.ua/booking.html">
@@ -162,7 +164,7 @@
                             </a>
                         </div>
                         <!-- //Забронировать -->
-                        
+
                         <p>
                             Присоединяйтесь к сообществу в социальных сетях:
                         <ul class="social_section_1info mt-1 mb-1">
@@ -307,10 +309,12 @@
                                 title="Запорожье на Днепре" href="#ZaporizhzhiaOnTheDnieper" rel="tag">Запорожье на
                                 Днепре</a></span>
                         <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('ExcursionWithFire')"
-                                class="text-white" title="Экскурсия с 'огоньком'" href="#ExcursionWithFire" rel="tag">Экскурсия с
+                                class="text-white" title="Экскурсия с 'огоньком'" href="#ExcursionWithFire"
+                                rel="tag">Экскурсия с
                                 "огоньком"</a></span>
                         <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('WalkWithTwist')"
-                                class="text-white" title="Прогулка с изюминкой" href="#WalkWithTwist" rel="tag">Прогулка с
+                                class="text-white" title="Прогулка с изюминкой" href="#WalkWithTwist" rel="tag">Прогулка
+                                с
                                 изюминкой</a></span>
                     </div>
                 </div>
@@ -383,22 +387,38 @@
                         <div class="row">
                             <ul class="col links">
                                 <!-- Места для путешествий-->
-                                <li id="PlacesToTravel"><a href="https://novipovorot.pp.ua/page-Dzharylgach.html" class="scroll">Джарылгач - Украинские Мальдивы</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-lions-and-horses.html" class="scroll">Львята И Лошадки</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Pink-Lake.html" class="scroll">Розовое Oзеро</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Zaporizhzhia-on-Dnieper.html" class="scroll">Запорожье На Днепре</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Kharkov.html" class="scroll">Хлопковые Горы Харькова</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-yavorovskaya-niagara.html" class="scroll">Яворовская Ниагара</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-gold-mines.html" class="scroll">Золотые Прииски Закарпатья</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Lviv-for-weekend.html" class="scroll">Львов На Выходные</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-zoo.html" class="scroll">Зоопарк Пылышенко</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Тайны и загадки Хортицы</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Натуральное Пиво</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-cheese-farm.html" class="scroll">Сырная Ферма И Пасека</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-wine.html" class="scroll">Экскурсия на Винный завод</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Походы По Турции</a></li>                            
-                                <li><a href="https://novipovorot.pp.ua/page-Karpati.html" class="scroll">Походы в Карпаты</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Georgia.html" class="scroll">Походы По Грузии</a></li>
+                                <li id="PlacesToTravel"><a href="https://novipovorot.pp.ua/page-Dzharylgach.html"
+                                        class="scroll">Джарылгач - Украинские Мальдивы</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-lions-and-horses.html" class="scroll">Львята
+                                        И Лошадки</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Pink-Lake.html" class="scroll">Розовое
+                                        Oзеро</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Zaporizhzhia-on-Dnieper.html"
+                                        class="scroll">Запорожье На Днепре</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Kharkov.html" class="scroll">Хлопковые Горы
+                                        Харькова</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-yavorovskaya-niagara.html"
+                                        class="scroll">Яворовская Ниагара</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-gold-mines.html" class="scroll">Золотые
+                                        Прииски Закарпатья</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Lviv-for-weekend.html" class="scroll">Львов
+                                        На Выходные</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-zoo.html" class="scroll">Зоопарк
+                                        Пылышенко</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Тайны и загадки
+                                        Хортицы</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Натуральное
+                                        Пиво</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-cheese-farm.html" class="scroll">Сырная
+                                        Ферма И Пасека</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-wine.html" class="scroll">Экскурсия на
+                                        Винный завод</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Походы По
+                                        Турции</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Karpati.html" class="scroll">Походы в
+                                        Карпаты</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Georgia.html" class="scroll">Походы По
+                                        Грузии</a></li>
                             </ul>
                         </div>
                     </div>
@@ -491,8 +511,9 @@
 
     <script>
         window.replainSettings = { id: 'd6700dc7-24e8-42c2-ad8d-fc8f31bc18e8' };
-        (function(u){var s=document.createElement('script');s.type='text/javascript';s.async=true;s.src=u;
-        var x=document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);
+        (function (u) {
+            var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = u;
+            var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
         })('https://widget.replain.cc/dist/client.js');
     </script>
 
