--- a/page-zoo.html
+++ b/page-zoo.html
@@ -258,7 +258,7 @@
                                             вкуснейшей воды!
                                             Загадаем желание и оно обязательно сбудется.
                                         </p>
-                                        <p><strong>17:30</strong> ММы уже в Запорожье! В ПОЛНОМ ВОСТОРГЕ ОТ ЭКСКУРСИИ! С
+                                        <p><strong>17:30</strong> Мы уже в Запорожье! В ПОЛНОМ ВОСТОРГЕ ОТ ЭКСКУРСИИ! С
                                             ПРЕКРАСНЫМ НАСТРОЕНИЕМ ОТДЫХАЕМ
                                             И ВЫКЛАДЫВАЕМ ФОТО. Не забывайте отмечать наши странички, +10000 в карму и
                                             искренняя наша благодарочка (moa)
