--- a/page-zoo.html
+++ b/page-zoo.html
@@ -279,7 +279,7 @@
                                     (от количества людей в группе)
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
-                                    входной билет и экскурсия в Центре Пылышенко,;
+                                    входной билет и экскурсия в Центре Пылышенко;
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     супер-позитивное сопровождение представителя Нового поворота;
@@ -290,7 +290,7 @@
                                     БЛАГОТВОРИТЕЛЬНАЯ АКЦИЯ НАКОРМИ ЛЬВА*(все кто едет с нами
                                     кроме оплаты входного билета в Центр Пылышенко дарят дополнительные средства,
                                     а именно Новый поворот 50% от поездки*(от прибыли ТА) передаст Центру
-                                    Пылышенко на питание львам)
+                                    Пылышенко на питание львам);
                                 </li>
                                 <li class="list-group-item list-group-item-success ">
                                     магнит от Нового поворота.
@@ -303,7 +303,7 @@
                                 <li class="list-group-item list-group-item-danger ">
                                     Входные билеты в Усадьбу Попова (70грн взрослые, 50 грн дети вход,
                                     экскурсия по комплексу отдельно +25-35 грн для групп от количества
-                                    людей в группе )
+                                    людей в группе);
                                 </li>
                                 <li class="list-group-item list-group-item-danger ">
                                     питание с собой.
